@@ -1,5 +1,6 @@
 package cn.shmedo.monitor.monibotbaseapi.model.param.sensor;
 
+import cn.hutool.core.bean.BeanUtil;
 import cn.hutool.core.collection.CollUtil;
 import cn.hutool.core.lang.Assert;
 import cn.hutool.extra.spring.SpringUtil;
@@ -13,13 +14,14 @@ import cn.shmedo.iot.entity.api.monitor.enums.DataSourceType;
 import cn.shmedo.iot.entity.api.monitor.enums.FieldClass;
 import cn.shmedo.iot.entity.api.monitor.enums.ParameterSubjectType;
 import cn.shmedo.iot.entity.api.permission.ResourcePermissionProvider;
-import cn.shmedo.monitor.monibotbaseapi.dal.mapper.TbMonitorTypeFieldMapper;
-import cn.shmedo.monitor.monibotbaseapi.dal.mapper.TbParameterMapper;
+import cn.shmedo.monitor.monibotbaseapi.constants.RedisConstant;
+import cn.shmedo.monitor.monibotbaseapi.constants.RedisKeys;
 import cn.shmedo.monitor.monibotbaseapi.dal.mapper.TbSensorMapper;
-import cn.shmedo.monitor.monibotbaseapi.model.db.TbMonitorTypeField;
+import cn.shmedo.monitor.monibotbaseapi.model.cache.MonitorTypeCacheData;
 import cn.shmedo.monitor.monibotbaseapi.model.db.TbParameter;
 import cn.shmedo.monitor.monibotbaseapi.model.db.TbSensor;
 import cn.shmedo.monitor.monibotbaseapi.model.dto.sensor.SensorConfigField;
+import cn.shmedo.monitor.monibotbaseapi.service.redis.RedisService;
 import com.baomidou.mybatisplus.core.conditions.query.LambdaQueryWrapper;
 import com.fasterxml.jackson.annotation.JsonIgnore;
 import jakarta.validation.constraints.NotEmpty;
@@ -161,14 +163,13 @@ public class SaveSensorRequest implements ParameterValidator, ResourcePermission
             }
         });
         //校验扩展配置
+        RedisService redisService = SpringUtil.getBean(RedisConstant.MONITOR_REDIS_SERVICE, RedisService.class);
         if (CollUtil.isNotEmpty(exFields)) {
-            TbMonitorTypeFieldMapper monitorTypeFieldMapper = SpringUtil.getBean(TbMonitorTypeFieldMapper.class);
-            Map<Integer, String> exMap = monitorTypeFieldMapper.selectList(new LambdaQueryWrapper<TbMonitorTypeField>()
-                    .eq(TbMonitorTypeField::getMonitorType, monitorType)
-                    .eq(TbMonitorTypeField::getFieldClass, FieldClass.EXTEND_CONFIG.getCode())
-                    .in(TbMonitorTypeField::getID, exFields.stream().map(SensorConfigField::getId).toList())
-                    .select(TbMonitorTypeField::getID, TbMonitorTypeField::getFieldName)
-            ).stream().collect(Collectors.toMap(TbMonitorTypeField::getID, TbMonitorTypeField::getFieldName));
+            MonitorTypeCacheData monitorTypeCacheData = redisService.get(RedisKeys.MONITOR_TYPE_KEY,
+                    monitorType.toString(), MonitorTypeCacheData.class);
+            Map<Integer, String> exMap = monitorTypeCacheData.getMonitortypeFieldList().stream()
+                    .filter(e -> FieldClass.EXTEND_CONFIG.equals(e.getFieldClass()))
+                    .collect(Collectors.toMap(MonitorTypeCacheData.Field::getID, MonitorTypeCacheData.Field::getFieldName));
             exFields.forEach(ex -> {
                 Assert.isTrue(exMap.containsKey(ex.getId()), "扩展配置项 [" + ex.getId() + "]不存在");
                 ex.setName(exMap.get(ex.getId()));
@@ -183,21 +184,19 @@ public class SaveSensorRequest implements ParameterValidator, ResourcePermission
 
         //校验参数
         if (CollUtil.isNotEmpty(paramFields)) {
-            TbParameterMapper parameterMapper = SpringUtil.getBean(TbParameterMapper.class);
-            Map<Integer, TbParameter> paramMap = parameterMapper.selectList(new LambdaQueryWrapper<TbParameter>()
-                    .eq(TbParameter::getSubjectType, ParameterSubjectType.TEMPLATE.getCode())
-                    .eq(TbParameter::getSubjectID, templateID)
-            ).stream().collect(Collectors.toMap(TbParameter::getID, e -> e));
-
-            parameterList = paramFields.stream().map(e -> {
-                Assert.isTrue(paramMap.containsKey(e.getId()), "参数配置项 [" + e.getId() + "]不存在");
-                TbParameter param = paramMap.get(e.getId());
-                param.setID(null);
-                param.setSubjectID(null);
-                param.setSubjectType(ParameterSubjectType.SENSOR.getCode());
-                param.setPaValue(e.getValue());
-                return param;
-            }).toList();
+            List<TbParameter> templateParams = redisService.getList(RedisKeys.PARAMETER_PREFIX_KEY +
+                            ParameterSubjectType.TEMPLATE.getCode(), templateID.toString(), TbParameter.class);
+            Map<Integer, SensorConfigField> paramFieldMap = paramFields.stream().collect(Collectors.toMap(SensorConfigField::getId, e -> e));
+            parameterList = templateParams.stream().peek(param -> {
+                SensorConfigField field = paramFieldMap.get(param.getID());
+                Assert.notNull(field, "参数配置项 [" + param.getID() + "]不存在");
+                Assert.notNull(field.getValue(), "参数配置项 [" + param.getID() + "]值不能为空");
+                TbParameter item = BeanUtil.copyProperties(param, TbParameter.class);
+                item.setID(null);
+                item.setSubjectID(null);
+                item.setSubjectType(ParameterSubjectType.SENSOR.getCode());
+                item.setPaValue(paramFieldMap.get(param.getID()).getValue());
+            }).collect(Collectors.toList());
         }
         return null;
     }
